// Jest Snapshot v1, https://goo.gl/fbAQLP


export default App;
"
`;

exports[`app not nested should generate files 1`] = `
"
// eslint-disable-next-line @typescript-eslint/no-unused-vars
import styles from './app.module.css';

import NxWelcome from \\"./nx-welcome\\";



export function App() {

  return (
    <>
      
      <NxWelcome title=\\"my-app\\"/>
      
      <div />
    </>);

}


export default App;
"
`;

exports[`app should create Nx specific template 1`] = `
"
// eslint-disable-next-line @typescript-eslint/no-unused-vars
import styles from './app.module.css';

import NxWelcome from \\"./nx-welcome\\";



export function App() {

  return (
    <>
      
      <NxWelcome title=\\"my-dir-my-app\\"/>
      
      <div />
    </>);

}


export default App;
"
`;
